@@ -265,11 +265,23 @@ version = 1.8.0a1
 
 ############################################################################################
 
+[Calibrate]
+
+    #
+    # This section can adjust data using calibration expressions.
+    #
+    
+    [[Corrections]]
+        # For each type, an arbitrary calibration expression can be given. For example:
+        # outTemp = outTemp - 3.0
+
+############################################################################################
+
 [Engines]
 
     # This section configures the internal weewx engines. It is for advanced customization.
 
     [[WxEngine]]
         # The list of services the main weewx engine should run:
-        service_list = weewx.wxengine.StdArchive, weewx.wxengine.StdTimeSynch, weewx.wxengine.StdPrint, weewx.wxengine.StdRESTful, weewx.wxengine.StdReportService
+        service_list = weewx.wxengine.StdCalibrate, weewx.wxengine.StdArchive, weewx.wxengine.StdTimeSynch, weewx.wxengine.StdPrint, weewx.wxengine.StdRESTful, weewx.wxengine.StdReportService
 
